--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>test react + rtk</title>
+    <link href="/src/index.css" rel="stylesheet" />
   </head>
 
   <body>
